--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <!-- Earrings -->
   <section class="products">
     <div class="product">
-      <img src="images/Earingss.jpg" alt="Earrings" />
+      <img src="Earingss.jpg" alt="Earrings" />
       <h3>Gold Earrings</h3>
       <p class="price">₹1,70,000</p>
       
     </div>
     <div class="product">
-      <img src="images/earings1.jpg" alt="Earrings" />
+      <img src="earings1.jpg" alt="Earrings" />
       <h3>Gold Earrings</h3>
       <p class="price">₹1,52,000</p>
     </div>
     <div class="product">
-      <img src="images/earings2.jpeg" alt="Earrings" />
+      <img src="earings2.jpeg" alt="Earrings" />
       <h3>Gold Earrings</h3>
       <p class="price">₹2,11,299</p>
     </div>
@@ -43,17 +43,17 @@
   <!-- Necklaces -->
   <section class="products">
     <div class="product">
-      <img src="images/necklece1.jpeg" alt="Necklace" />
+      <img src="necklece1.jpeg" alt="Necklace" />
       <h3>Pearl Necklace</h3>
       <p class="price">₹8,70,000</p>
     </div>
     <div class="product">
-      <img src="images/necklece.jpeg" alt="Necklace" />
+      <img src="necklece.jpeg" alt="Necklace" />
       <h3>Pearl Necklace</h3>
       <p class="price">₹5,00,000</p>
     </div>
     <div class="product">
-      <img src="images/necklece2.jpeg" alt="Necklace" />
+      <img src="necklece2.jpeg" alt="Necklace" />
       <h3>Pearl Necklace</h3>
       <p class="price">₹7,11,299</p>
     </div>
@@ -62,17 +62,17 @@
   <!-- Rings -->
   <section class="products">
     <div class="product">
-      <img src="images/ring2.jpeg" alt="Ring" />
+      <img src="ring2.jpeg" alt="Ring" />
       <h3>Diamond Ring</h3>
       <p class="price">₹2,00,000</p>
     </div>
     <div class="product">
-      <img src="images/ring1.jpeg" alt="Ring" />
+      <img src="ring1.jpeg" alt="Ring" />
       <h3>Diamond Ring</h3>
       <p class="price">₹5,00,000</p>
     </div>
     <div class="product">
-      <img src="images/ring.jpeg" alt="Ring" />
+      <img src="ring.jpeg" alt="Ring" />
       <h3>Diamond Ring</h3>
       <p class="price">₹1,11,299</p>
     </div>
@@ -81,7 +81,7 @@
   <!-- Info Section -->
   <section class="info-section">
     <div class="flexbox">
-      <img src="images/kammal.jpg" alt="Jimikki Kammal" />
+      <img src="kammal.jpg" alt="Jimikki Kammal" />
       <p>
         <b>Jimikki Kammal</b> refers to both a traditional South Indian earring
         and a viral Malayalam song from 2017. The earring is a bell-shaped
@@ -96,7 +96,7 @@
     </div>
 
     <div class="flexbox">
-      <img src="images/neck.jpg" alt="Necklace" />
+      <img src="neck.jpg" alt="Necklace" />
       <p>
         The <b>necklace</b> has captivated cultures for millennia. From ancient
         Egypt to modern times, it remains a symbol of power, beauty, and
@@ -107,7 +107,7 @@
     </div>
 
     <div class="flexbox">
-      <img src="images/ringscontent.jpeg" alt="Ring" />
+      <img src="ringscontent.jpeg" alt="Ring" />
       <p>
         The <b>Diamond Ring</b> is a symbol of love and eternity. Its sparkling
         brilliance captures timeless beauty, making it an ideal piece for
@@ -121,3 +121,4 @@
   </footer>
 </body>
 </html>
+
